IRtest_out/84_last_word_length.err
irs/84_last_word_length.ll:38:1: error: expected instruction opcode
next_entry26:
^
1 error generated.
